FIXED/REVISED SOME CODES